--- a/dialogeditor/phaseeditorwindow.ui
+++ b/dialogeditor/phaseeditorwindow.ui
@@ -136,7 +136,7 @@
      <item row="4" column="0">
       <widget class="QLabel" name="label_8">
        <property name="text">
-        <string>Кол-во штрафных быллов:</string>
+        <string>Кол-во штрафных баллов:</string>
        </property>
       </widget>
      </item>
